draft editing support, bugfixes

--- a/src/hex/resources/data/CREDITS.html
+++ b/src/hex/resources/data/CREDITS.html
@@ -6,5 +6,7 @@ Mail to: <a href="mailto:xraux@mail.ru">zenw@yandex.ru</a><br>
 <br>
 This application uses icons from Fugue icon set created by <a href="http://p.yusukekamiyamane.com/">Yusuke Kamiyamane</a>. All rights reserved. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">
 Creative Commons Attribution 3.0 License</a>.
+<br>
+Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a> and distributed under GPL license.
 </body>
 </html>
