--- a/src/hex/resources/data/CREDITS.html
+++ b/src/hex/resources/data/CREDITS.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-Idea, programming and totally all: Victor Veresov (a.k.a. x-Ray a.k.a. zenwarr)<br>
+Idea, programming and totally all: Victor Tyazhelnikov (a.k.a. x-Ray a.k.a. zenwarr)<br>
 Mail to: <a href="mailto:xraux@mail.ru">zenw@yandex.ru</a><br>
 <br>
 <br>
