--- a/src/hex/resources/data/CREDITS.html
+++ b/src/hex/resources/data/CREDITS.html
@@ -6,6 +6,6 @@ Mail to: <a href="mailto:xraux@mail.ru">zenw@yandex.ru</a><br>
 <br>
 This application is distributed with some icons from Oxygen icon theme, distributed under GNU LGPL.
 <br><br>
-Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a> and distributed under GPL.
+Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a> and distributed under GNU GPL.
 </body>
 </html>
