draft binary data parsing functionality

--- a/src/hex/resources/data/CREDITS.html
+++ b/src/hex/resources/data/CREDITS.html
@@ -1,11 +1,12 @@
 <html>
 <body>
-Idea, programming and totally all: Victor Tyazhelnikov (a.k.a. x-Ray a.k.a. zenwarr)<br>
-Mail to: <a href="mailto:xraux@mail.ru">zenw@yandex.ru</a><br>
+Idea, programming and realization: Victor Tyazhelnikov (a.k.a. zenwarr)<br>
+Mail to: <a href="mailto:zenw@yandex.ru">zenw@yandex.ru</a><br>
 <br>
 <br>
 This application is distributed with some icons from Oxygen icon theme, distributed under GNU LGPL.
 <br><br>
 Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a> and distributed under GNU GPL.
+<br><br>
 </body>
 </html>
