--- a/src/hex/resources/data/CREDITS.html
+++ b/src/hex/resources/data/CREDITS.html
@@ -6,7 +6,10 @@ Mail to: <a href="mailto:zenw@yandex.ru">zenw@yandex.ru</a><br>
 <br>
 This application is distributed with some icons from Oxygen icon theme, distributed under GNU LGPL.
 <br><br>
-Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a> and distributed under GNU GPL.
+Application main icon is from DI Black Folder Icons pack created by <a href="http://www.drewmaughan.com/">Drew Maughan</a>
+and distributed under GNU GPL.
 <br><br>
+This application uses icons from Fugue icon set created by <a href="http://p.yusukekamiyamane.com/">Yusuke Kamiyamane</a>
+and distrubuted under Creative Commons Attribution 3.0 License.
 </body>
 </html>
